jalangi_test/timeResultsLyaNOWITH.txt
The name of file 3d-cube.js

real	2m7.553s
user	2m1.640s
sys	0m6.420s
The name of file 3d-morph.js

real	0m42.231s
user	0m42.100s
sys	0m0.244s
The name of file 3d-raytrace.js

real	0m3.303s
user	0m3.436s
sys	0m0.064s
The name of file access-binary-trees.js

real	0m0.820s
user	0m0.824s
sys	0m0.012s
The name of file access-fannkuch.js

real	0m0.564s
user	0m0.560s
sys	0m0.004s
The name of file access-nbody.js

real	0m20.715s
user	0m20.740s
sys	0m0.116s
The name of file access-nsieve.js

real	0m0.321s
user	0m0.252s
sys	0m0.072s
The name of file bitops-3bit-bits-in-byte.js

real	0m0.229s
user	0m0.212s
sys	0m0.016s
The name of file bitops-bits-in-byte.js

real	0m0.447s
user	0m0.440s
sys	0m0.008s
The name of file bitops-bitwise-and.js

real	0m0.212s
user	0m0.212s
sys	0m0.000s
The name of file bitops-nsieve-bits.js

real	0m0.295s
user	0m0.284s
sys	0m0.012s
The name of file controlflow-recursive.js

real	0m0.455s
user	0m0.444s
sys	0m0.012s
The name of file crypto-aes.js

real	0m5.550s
user	0m5.592s
sys	0m0.148s
The name of file crypto-md5.js

real	0m0.303s
user	0m0.320s
sys	0m0.004s
The name of file crypto-sha1.js

real	0m0.341s
user	0m0.332s
sys	0m0.012s
The name of file date-format-tofte.js
undefined:1
Y()
^

ReferenceError: Y is not defined
    at eval (eval at _obj (/home/lya/core/src/txfm.js:450:20), <anonymous>:1:1)
    at eval (<anonymous>)
    at eval (/home/lya/core/src/txfm.js:450:20)
    at Object.apply (/home/lya/core/src/txfm.js:156:32)
    at Date.formatDate (/home/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:363:26)
    at Object.<anonymous> (/home/lya/paper/tst/jalangi_test/sunspider/date-format-tofte.js:378:28)
    at Object.apply (/home/lya/core/src/txfm.js:300:22)
    at Module._compile (internal/modules/cjs/loader.js:1144:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1164:10)
    at Module.load (internal/modules/cjs/loader.js:993:32)

real	0m0.053s
user	0m0.048s
sys	0m0.004s
The name of file date-format-xparb.js
undefined:1
Date.prototype.format0 = function(){return this.getFullYear() + '-' + String.leftPad(this.getMonth() + 1, 2, '0') + '-' + String.leftPad(this.getDate(), 2, '0');}
                                                                             ^

TypeError: String.leftPad is not a function
    at Date.format0 (eval at _obj (/home/lya/core/src/txfm.js:450:20), <anonymous>:1:78)
    at Date.dateFormat (/home/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:106:22)
    at Object.<anonymous> (/home/lya/paper/tst/jalangi_test/sunspider/date-format-xparb.js:497:28)
    at Object.apply (/home/lya/core/src/txfm.js:300:22)
    at Module._compile (internal/modules/cjs/loader.js:1144:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1164:10)
    at Module.load (internal/modules/cjs/loader.js:993:32)
    at Function.Module._load (internal/modules/cjs/loader.js:892:14)
    at Module.require (internal/modules/cjs/loader.js:1033:19)
    at Module.require (/home/lya/core/src/txfm.js:542:41)

real	0m0.054s
user	0m0.048s
sys	0m0.004s
The name of file math-cordic.js

real	0m0.535s
user	0m0.536s
sys	0m0.004s
The name of file math-partial-sums.js

real	0m51.455s
user	0m51.464s
sys	0m0.172s
The name of file math-spectral-norm.js

real	0m0.410s
user	0m0.416s
sys	0m0.008s
The name of file regexp-dna.js

real	0m0.868s
user	0m0.820s
sys	0m0.056s
The name of file string-base64.js

real	0m16.239s
user	0m16.232s
sys	0m0.064s
The name of file string-fasta.js

real	0m0.800s
user	0m0.788s
sys	0m0.020s
The name of file string-tagcloud.js

real	0m6.304s
user	0m6.316s
sys	0m0.104s
The name of file string-unpack-code.js

real	0m4.719s
user	0m4.696s
sys	0m0.076s
The name of file string-validate-input.js

real	0m0.101s
user	0m0.092s
sys	0m0.016s
